--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
               beauty with
               us.
             </div>
-            <div class="norway__button">
+            <div class="hotel-norway__button">
               <a href="#" class="button button-block">Learn More</a>
             </div>
           </div>
@@ -331,16 +331,16 @@
           </div>
 
           <div class="footer__nav-link-reservation rooms-link">
-            <a href="#" class="reservation-link__title rooms-title-link">Reservation</a>
-            <a href="#" class="reservation-link__text rooms-text-link">See the Steps</a>
-            <a href="#" class="reservation-link__text rooms-text-link">Best Time</a>
+            <a href="#" class="rooms-link__title rooms-title-link">Reservation</a>
+            <a href="#" class="rooms-link__text rooms-text-link">See the Steps</a>
+            <a href="#" class="rooms-link__text rooms-text-link">Best Time</a>
           </div>
 
           <div class="footer__nav-link-contact rooms-link">
-            <a href="#" class="contact-link__title rooms-title-link">Contact</a>
-            <a href="#" class="contact-link__text rooms-text-link">Our Number</a>
-            <a href="#" class="contact-link__text rooms-text-link">Our Email</a>
-            <a href="#" class="contact-link__text rooms-text-link">Our Location</a>
+            <a href="#" class="rooms-link__title rooms-title-link">Contact</a>
+            <a href="#" class="rooms-link__text rooms-text-link">Our Number</a>
+            <a href="#" class="rooms-link__text rooms-text-link">Our Email</a>
+            <a href="#" class="rooms-link__text rooms-text-link">Our Location</a>
           </div>
         </div>
       </div>
